[package]
name = "jet"
version = "0.3.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
description = "Jet API Client for Rust"
license = "MIT"
edition = "2018"

[dependencies]
chrono = { version = "0.4.0", features = ["serde"] }
serde = { version = "1.0.10", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
headers = "0.3.5"
thiserror = "1"
serde_json = "1.0"

[dev-dependencies]
dotenv = "0.10.1"